# spotify-search

./: Cargo.toml  LICENSE  README.md
src/: config.example.rs  main.rs  search.rs  web.rs
src/assets/web/: app.js  components.js  index.html  styles.css
src/assets/web/components/: LazyImage.js  index.js
