[package]
name = "spotify-search"
version = "0.5.0"
authors = ["Simon Brulhart <simon@brulhart.me>"]
edition = "2018"

# [[bin]]
# name = "spotify-search-web"

[dependencies]
clap = "2.33"
rust-embed = "5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
unidecode = "0.3"
warp = "0.3"
